[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "marimo>=0.18.4",
    "openai>=2.11.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "ruff>=0.14.9",
    "sqlglot>=28.3.0",
]
